fix: fixed cropping issue on hero img in mobile veiw

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -177,6 +177,10 @@
         gap: var(--space-2xl);
     }
 
+    .hero_image {
+        transform: translateY(0);
+    }
+
     .hero_left {
         order: 1;
     }
@@ -190,7 +194,7 @@
         margin-inline: auto;
     }
 
-    .her-_actions {
+    .hero_actions {
         flex-wrap: wrap;
     }
 
